--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Hi, I'm Renata</h1>
+        <h1>Hi, this is a test to see if the font gets smaller</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <a class="btn btn-large btn-success" href="#">Get started today</a>
       </div>
@@ -180,7 +180,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy;/p>
+        <p></p>
       </footer>
 
     </div><!-- /.container -->
