added profile pic

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Hi, this is a test to see if the font gets smaller</h1>
+        <h1>Hi, I'm Renata</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <a class="btn btn-large btn-success" href="#">Get started today</a>
       </div>
@@ -151,7 +151,7 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="assets/img/examples/browser-icon-chrome.png">
+        <img class="featurette-image pull-right" src="assets/img/examples/profile_pic.jpg">
         <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
