in about me nav button changed the # to website url

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
-                <li class="active"><a href="#">About Me</a></li>
+                <li class="active"><a href="renatacummins.com/index.html">About Me</a></li>
                 <li><a href="#">Research</a></li>
                 <li><a href="#">Teaching and outreach</a></li>
                 <li><a href="#">Contact</a></li>
@@ -119,7 +119,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Hi, I'm Renata</h1>
-        <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consulting or analyst position</p>
+        <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consultant or analyst position</p>
 <!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
       </div>
 
