--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
-                <li class="active"><a href="renatacummins.com/index.html">About Me</a></li>
+                <li class="active"><a href="/index.html">About Me</a></li>
                 <li><a href="#">Research</a></li>
                 <li><a href="#">Teaching and outreach</a></li>
                 <li><a href="#">Contact</a></li>
