added contact dot html to the url for the contact nav bar button

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <li class="active"><a href="/index.html">About Me</a></li>
                 <li><a href="#">Research</a></li>
                 <li><a href="#">Teaching and outreach</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
