--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       /* Main marketing message and sign up button */
       .jumbotron {
         margin: 80px 0;
-        text-align: center;
+        text-align: left;
       }
       .jumbotron h1 {
         font-size: 60px;
@@ -119,48 +119,14 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <p class="lead">Email: renatacummins@gmail.com</p>
+        <p class="lead">Cell: (650) 416-4224</p>
 <!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
       </div>
 
 <!--     <hr> -->
 
 
-      <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="assets/img/examples/profile_pic.jpg">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="assets/img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p></p>
-      </footer>
 
     </div><!-- /.container -->
 
