changed contact info class to btn and added script from linked in to show profile link

--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,11 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <p class="lead">Email: renatacummins@gmail.com</p>
-        <p class="lead">Cell: (650) 416-4224</p>
-<!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
+        <p class="btn">Email: renatacummins@gmail.com</p>
+        <p class="btn">Cell: (650) 416-4224</p>
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script>
+
       </div>
 
 <!--     <hr> -->
