--- a/contact.html
+++ b/contact.html
@@ -118,12 +118,13 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <p class="btn">Email: renatacummins@gmail.com</p>
-        <p class="btn">Cell: (650) 416-4224</p>
+        <p class="lead">Email: renatacummins@gmail.com</p>
+        <p class="lead">Cell: (650) 416-4224</p>
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script>
       </div>
 
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script>
+        
 
 <!--     <hr> -->
 
