--- a/contact.html
+++ b/contact.html
@@ -119,9 +119,9 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <p class="lead">Email: renatacummins@gmail.com</p>
-        <p class="lead">Cell: (650) 416-4224</p>
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script>
+        <p class="lead">Cell: 650 416 4224</p>
+         <p class="lead"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script></p>
       </div>
 
         
