--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         text-align: center;
       }
       .jumbotron h1 {
-        font-size: 60px;
+        font-size: 40px;
         line-height: 1;
       }
       .jumbotron .lead {
@@ -80,6 +80,38 @@
         border-right: 0;
         border-radius: 0 3px 3px 0;
       }
+
+    /* Featurettes
+    ------------------------- */
+
+    .featurette-divider {
+      margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    }
+    .featurette {
+      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+      overflow: hidden; /* Vertically center images part 2: clear their floats. */
+    }
+    .featurette-image {
+      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+    }
+
+    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
+    .featurette-image.pull-left {
+      margin-right: 40px;
+    }
+    .featurette-image.pull-right {
+      margin-left: 40px;
+    }
+
+    /* Thin out the marketing headings */
+    .featurette-heading {
+      font-size: 50px;
+      font-weight: 300;
+      line-height: 1;
+      letter-spacing: -1px;
+    }
+
+
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
