--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
+        <img class="featurette-image pull-right" src="assets/img/examples/environmental.pdf">
         <h2 class="featurette-heading">Environmental scientist by training. </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
