--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="assets/img/examples/environmental.pdf">
+        <img class="featurette-image pull-right" src="assets/img/examples/environmental-01.jpg">
         <h2 class="featurette-heading">Environmental scientist by training. </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard. </p>
       </div>
 
       <hr class="featurette-divider">
