fixed nav bar and added link to research page under first featurette

--- a/contact.html
+++ b/contact.html
@@ -101,14 +101,13 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted">Renata Cummins</h3>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
                 <li><a href="/index.html">About Me</a></li>
-                <li><a href="#">Research</a></li>
-                <li><a href="#">Teaching and outreach</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/outreach.html">Outreach</a></li>
                 <li class="active"><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
