--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <div class="container">
               <ul class="nav">
                 <li class="active"><a href="/index.html">About Me</a></li>
-                <li><a href="#">Research</a></li>
-                <li><a href="#">Teaching and outreach</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
@@ -164,7 +164,7 @@
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
         <h2 class="featurette-heading">Environmental scientist by training. </h2>
-        <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard. </p>
+        <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. I also have four years of research experience in the envrionmental sciences. <a href="/research.html">Read more about my research.</a> </p>
       </div>
 
       <hr class="featurette-divider">
