split environmental blurb into two paragraphs

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
         <h2 class="featurette-heading">Environmental scientist by training. </h2>
-        <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. I also have four years of research experience in the envrionmental sciences. <a href="/research.html">Read more about my research.</a> </p>
+        <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. </p>
+        <p class="lead"> I also have four years of research experience in the envrionmental sciences. <a href="/research.html">Read more about my research.</a> </p>
       </div>
 
       <hr class="featurette-divider">
