added contact info title to top

--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
+        <h1>Contact info</h1>
         <p class="lead">Email: renatacummins@gmail.com</p>
         <p class="lead">Cell: 650 416 4224</p>
          <p class="lead"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
