added quantitative blub

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
         <h2 class="featurette-heading">Quantitative background. </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made freqent use of Excel and Matlab for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propogating error. </p>
       </div>
 
       <hr class="featurette-divider">
