added committed blurb

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       margin: 80px 0; /* Space out the Bootstrap <hr> more */
     }
     .featurette {
-      padding-top: 40px; /* Vertically center images part 1: add padding above and below text. */
+      padding-top: 20px; /* Vertically center images part 1: add padding above and below text. */
       overflow: hidden; /* Vertically center images part 2: clear their floats. */
     }
     .featurette-image {
-      margin-top: -40px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+      margin-top: -20px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
     }
 
     /* Give some space on the sides of the floated elements so text doesn't run right into it. */
@@ -188,8 +188,8 @@
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
-        <h2 class="featurette-heading">Team-player. </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Team player. </h2>
+        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Sucess didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
       </div>
 
       <hr class="featurette-divider">
