added team player blurb

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/committed.JPG">
         <h2 class="featurette-heading">Committed. </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Sucess didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -189,7 +189,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
         <h2 class="featurette-heading">Team player. </h2>
-        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Sucess didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
+        <p class="lead">Research is a highly collaborative process, so I often found myself brainstorming with, teaching or learning from colleagues. My team skills have also been tested in the athletic realm. As the captain of my high school cross country team, I learned to motivate and build camaraderie among many runners of varying ability. As captain and coxswain of my college intramural crew team, I relished the challenge of judging from the anguished grimaces on my rowers' faces whether to push them harder or let them rest easy. </p>
       </div>
 
       <hr class="featurette-divider">
