deleted athletic realm sentence

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
         <h2 class="featurette-heading">Team player. </h2>
-        <p class="lead">Research is a highly collaborative process, so I often found myself brainstorming with, teaching or learning from colleagues. My team skills have also been tested in the athletic realm. As captain of my high school cross country team, I learned to motivate and build camaraderie among many runners of varying ability. As captain and coxswain of my college intramural crew team, I relished the challenge of judging from the anguished grimaces on my rowers' faces whether to push them harder or let them rest easy. </p>
+        <p class="lead">Research is a highly collaborative process, so I often found myself brainstorming with, teaching or learning from colleagues. As captain of my high school cross country team, I learned to motivate and build camaraderie among many runners of varying ability. As captain and coxswain of my college intramural crew team, I relished the challenge of judging from the anguished grimaces on my rowers' faces whether to push them harder or let them rest easy. </p>
       </div>
 
       <hr class="featurette-divider">
