fixed several spelling mistakes and replaced Excel with R

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
         <h2 class="featurette-heading">Environmental scientist by training. </h2>
         <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. </p>
-        <p class="lead"> I also have four years of research experience in the envrionmental sciences. <a href="/research.html">Read more about my research.</a> </p>
+        <p class="lead"> I also have four years of research experience in the environmental sciences. <a href="/research.html">Read more about my research.</a> </p>
       </div>
 
       <hr class="featurette-divider">
@@ -173,7 +173,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
         <h2 class="featurette-heading">Quantitative background. </h2>
-        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made freqent use of Excel and Matlab for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propogating error. </p>
+        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of MATLAB and R for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -181,7 +181,7 @@
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/committed.JPG">
         <h2 class="featurette-heading">Committed. </h2>
-        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Sucess didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
+        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Success didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
       </div>
 
       <hr class="featurette-divider">
