--- a/research.html
+++ b/research.html
@@ -21,6 +21,15 @@
         padding-bottom: 60px;
       }
 
+      /* Custom container */
+      .container {
+        margin: 0 auto;
+        max-width: 1000px;
+      }
+      .container > hr {
+        margin: 60px 0;
+      }
+
 
 
     /* CUSTOMIZE THE NAVBAR
