--- a/research.html
+++ b/research.html
@@ -65,7 +65,7 @@
       }
 
 
-<!--    /* Special class on .container surrounding .navbar, used for positioning it into place. */
+    /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
       position: absolute;
       top: 0;
@@ -78,33 +78,6 @@
     .navbar-wrapper .navbar {
 
     }
-
-    /* Remove border and change up box shadow for more contrast */
-    .navbar .navbar-inner {
-      border: 0;
-      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-              box-shadow: 0 2px 10px rgba(0,0,0,.25);
-    }
-
-    /* Downsize the brand/project name a bit */
-    .navbar .brand {
-      padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
-      font-size: 16px;
-      font-weight: bold;
-      text-shadow: 0 -1px 0 rgba(0,0,0,.5);
-    }
-
-    /* Navbar links: increase padding for taller navbar */
-    .navbar .nav > li > a {
-      padding: 15px 20px;
-    }
-
-    /* Offset the responsive button for proper vertical alignment */
-    .navbar .btn-navbar {
-      margin-top: 10px;
-    }
--->
 
 
     /* CUSTOMIZE THE CAROUSEL
@@ -312,6 +285,9 @@
     <!-- NAVBAR
     ================================================== -->
 
+    <div class="navbar-wrapper">
+      <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+
     <div class="container">
 
       <div class="masthead">
@@ -327,7 +303,8 @@
             </div>
           </div>
         </div><!-- /.navbar -->
-      </div>
+      </div><!-- /.container -->
+      </div><!-- /.navbar-wrapper -->
 
 
     <!-- Carousel
