--- a/research.html
+++ b/research.html
@@ -16,17 +16,19 @@
     -------------------------------------------------- */
     /* Padding below the footer and lighter body text */
 
+      <!-- From About Me page -->
       body {
         padding-top: 20px;
         padding-bottom: 60px;
       }
 
+      <!-- From About Me page -->
       /* Custom container */
-      .container {
+      .container-navbar {
         margin: 0 auto;
         max-width: 1000px;
       }
-      .container > hr {
+      .container-navbar > hr {
         margin: 60px 0;
       }
 
@@ -35,6 +37,7 @@
     /* CUSTOMIZE THE NAVBAR
     -------------------------------------------------- */
 
+      <!-- From About Me page -->
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
         padding: 0;
@@ -64,7 +67,7 @@
         border-radius: 0 3px 3px 0;
       }
 
-
+      <!-- From Carousel example page -->
     /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
       position: absolute;
@@ -80,6 +83,7 @@
     }
 
 
+      <!-- From Carousel example page -->
     /* CUSTOMIZE THE CAROUSEL
     -------------------------------------------------- */
 
@@ -288,7 +292,7 @@
     <div class="navbar-wrapper">
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
 
-    <div class="container">
+    <div class="container-navbar">
 
       <div class="masthead">
         <div class="navbar">
