changed container-navbar to containernavbar in the 3 places it occurred

--- a/research.html
+++ b/research.html
@@ -24,11 +24,11 @@
 
       <!-- From About Me page -->
       /* Custom container */
-      .container-navbar {
+      .containernavbar {
         margin: 0 auto;
         max-width: 1000px;
       }
-      .container-navbar > hr {
+      .containernavbar > hr {
         margin: 60px 0;
       }
 
@@ -292,7 +292,7 @@
     <div class="navbar-wrapper">
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
 
-    <div class="container-navbar">
+    <div class="containernavbar">
 
       <div class="masthead">
         <div class="navbar">
