--- a/research.html
+++ b/research.html
@@ -24,11 +24,11 @@
 
       <!-- From About Me page -->
       /* Custom container */
-      .containernavbar {
+      .container {
         margin: 0 auto;
         max-width: 1000px;
       }
-      .containernavbar > hr {
+      .container > hr {
         margin: 60px 0;
       }
 
@@ -292,7 +292,7 @@
     <div class="navbar-wrapper">
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
 
-    <div class="containernavbar">
+    <div class="container">
 
       <div class="masthead">
         <div class="navbar">
