added extra /div in navbar css that was missing

--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 
       <!-- From About Me page -->
       /* Custom container */
-      .container{
+      .container {
         margin: 0 auto;
         max-width: 1000px;
       }
@@ -304,11 +304,12 @@
                 <li><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
-            </div>
-          </div>
+            </div><!-- /.container -->
+          </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
-      </div><!-- /.container -->
-      </div><!-- /.navbar-wrapper -->
+      </div><!-- /.masthead -->
+    </div><!-- /.container -->
+    </div><!-- /.navbar-wrapper -->
 
 
     <!-- Carousel
