--- a/research.html
+++ b/research.html
@@ -289,7 +289,7 @@
     <!-- NAVBAR
     ================================================== -->
 
-    <div class="navbar-wrapper">
+<!--    <div class="navbar-wrapper">
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
 
     <div class="container">
@@ -309,7 +309,7 @@
         </div><!-- /.navbar -->
       </div><!-- /.masthead -->
     </div><!-- /.container -->
-    </div><!-- /.navbar-wrapper -->
+<!--    </div><!-- /.navbar-wrapper -->
 
 
     <!-- Carousel
