--- a/research.html
+++ b/research.html
@@ -17,8 +17,8 @@
     /* Padding below the footer and lighter body text */
 
     body {
-      padding-bottom: 40px;
-      color: #5a5a5a;
+        padding-top: 20px;
+        padding-bottom: 60px;
     }
 
 
