--- a/research.html
+++ b/research.html
@@ -21,6 +21,36 @@
         padding-bottom: 60px;
     }
 
+      /* Customize the navbar links to be fill the entire space of the .navbar */
+      .navbar .navbar-inner {
+        padding: 0;
+      }
+      .navbar .nav {
+        margin: 0;
+        display: table;
+        width: 100%;
+      }
+      .navbar .nav li {
+        display: table-cell;
+        width: 1%;
+        float: none;
+      }
+      .navbar .nav li a {
+        font-weight: bold;
+        text-align: center;
+        border-left: 1px solid rgba(255,255,255,.75);
+        border-right: 1px solid rgba(0,0,0,.1);
+      }
+      .navbar .nav li:first-child a {
+        border-left: 0;
+        border-radius: 3px 0 0 3px;
+      }
+      .navbar .nav li:last-child a {
+        border-right: 0;
+        border-radius: 0 3px 3px 0;
+      }
+
+
 
 
     /* CUSTOMIZE THE NAVBAR
@@ -254,7 +284,6 @@
 
         <div class="navbar">
           <div class="navbar-inner">
-            <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
               <ul class="nav">
                 <li><a href="/index.html">About Me</a></li>
                 <li class="active"><a href="/research.html">Research</a></li>
