--- a/research.html
+++ b/research.html
@@ -40,6 +40,11 @@
 
     }
 
+    .navbar-wrapper .container {
+        margin: 0 auto;
+        max-width: 1000px;
+    }
+
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
         padding: 0;
