--- a/research.html
+++ b/research.html
@@ -230,6 +230,14 @@
               <ul class="nav">
                 <li><a href="/index.html">About Me</a></li>
                 <li class="active"><a href="/research.html">Research</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Past climate change</a></li>
+                    <li><a href="#">Methane-oxidizing microbes</a></li>
+                    <li><a href="#">Ancient microbial metabolism</a></li>
+                  </ul>
+                </li>
                 <li><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
