deleted carousel and added back in the navbar responsive css. still need to fix javascript

--- a/research.html
+++ b/research.html
@@ -137,6 +137,15 @@
 
     @media (max-width: 979px) {
 
+      .container.navbar-wrapper {
+        margin-bottom: 0;
+        width: auto;
+      }
+      .navbar-inner {
+        border-radius: 0;
+        margin: -20px 0;
+      }
+
       .carousel .item {
         height: 500px;
       }
@@ -160,6 +169,10 @@
 
 
     @media (max-width: 767px) {
+
+      .navbar-inner {
+        margin: -20px;
+      }
 
       .carousel {
         margin-left: -20px;
@@ -248,45 +261,6 @@
     </div><!-- /.navbar-wrapper -->
 
 
-
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="../assets/img/slide-01.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Measuring ocean temperatures in the past.</h1>
-              <p class="lead">I used a new tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 400 million years ago.</p>
-              <a class="btn btn-large btn-primary" href="/research/ocean_temperature.html">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="../assets/img/slide-02.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="../assets/img/slide-03.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-    </div><!-- /.carousel -->
 
 
 
