--- a/research.html
+++ b/research.html
@@ -289,6 +289,7 @@
         })
       }(window.jQuery)
     </script>
+    <script>$('.dropdown-toggle').dropdown()</script>
     <script src="../assets/js/holder/holder.js"></script>
   </body>
 </html>
