cut the link to the bootstrap-dropdown.js and put it at the top of the file below meta

--- a/research.html
+++ b/research.html
@@ -7,6 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- javascript -->
+    <script src="../assets/js/bootstrap-dropdown.js"></script>
+
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
@@ -433,7 +436,7 @@
     <script src="../assets/js/bootstrap-transition.js"></script>
     <script src="../assets/js/bootstrap-alert.js"></script>
     <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
+
     <script src="../assets/js/bootstrap-scrollspy.js"></script>
     <script src="../assets/js/bootstrap-tab.js"></script>
     <script src="../assets/js/bootstrap-tooltip.js"></script>
