--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- javascript -->
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
 
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
