dropdown menu now horizontal. to try to fix, added empty css .nav-collapse .nav

--- a/research.html
+++ b/research.html
@@ -44,15 +44,21 @@
 
     }
 
+      /* Custom container */
     .navbar-wrapper .container {
         margin: 0 auto;
         max-width: 1000px;
     }
 
-    /* Offset the responsive button for proper vertical alignment */
+      /* Offset the responsive button for proper vertical alignment */
     .navbar .btn-navbar {
       margin-top: 10px;
     }
+
+      /* Make sure formatting of .nav in dropdown menu is default */
+      .nav-collapse .nav {
+
+      }
 
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
