replaced empty css with .dropdown-menu left:auto

--- a/research.html
+++ b/research.html
@@ -85,11 +85,8 @@
       }
 
       /* Make sure formatting of .nav in dropdown menu is default */
-      .nav-collapse .nav {
-
-      }
-      .nav-collapse .nav li {
-
+      .dropdown-menu{
+      left:auto;
       }
 
 
