--- a/research.html
+++ b/research.html
@@ -152,9 +152,9 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Past climate change</a></li>
-                    <li><a href="#">Methane-oxidizing microbes</a></li>
-                    <li><a href="#">Ancient microbial metabolism</a></li>
+                    <li><a href="/climate.html">Past climate change</a></li>
+                    <li><a href="/methane.html">Methane-oxidizing microbes</a></li>
+                    <li><a href="/metabolism.html">Ancient microbial metabolism</a></li>
                   </ul>
                 </li>
                 <li><a href="/outreach.html">Outreach</a></li>
