changed outeach link to not be active

--- a/climate.html
+++ b/climate.html
@@ -195,7 +195,7 @@
                     <li><a href="/metabolism.html">Ancient microbial metabolism</a></li>
                   </ul>
                 </li>
-                <li class="active"><a href="/outreach.html">Outreach</a></li>
+                <li><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div><!--/.nav-collapse -->
