--- a/methane.html
+++ b/methane.html
@@ -35,7 +35,7 @@
         text-align: left;
       }
       .jumbotron h1 {
-        font-size: 40px;
+        font-size: 60px;
         line-height: 1;
       }
       .jumbotron .lead {
@@ -120,6 +120,38 @@
 
     }
 
+
+    /* Featurettes
+    ------------------------- */
+
+    .featurette-divider {
+      margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    }
+    .featurette {
+      padding-top: 0px; /* Vertically center images part 1: add padding above and below text. */
+      overflow: hidden; /* Vertically center images part 2: clear their floats. */
+    }
+    .featurette-image {
+      margin-top: 0px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+    }
+
+    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
+    .featurette-image.pull-left {
+      margin-right: 40px;
+    }
+    .featurette-image.pull-right {
+      margin-left: 40px;
+    }
+
+    /* Thin out the marketing headings */
+    .featurette-heading {
+      font-size: 50px;
+      font-weight: 300;
+      line-height: 1;
+      letter-spacing: -1px;
+    }
+
+
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -164,22 +196,16 @@
                   </ul>
                 </li>
                 <li><a href="/outreach.html">Outreach</a></li>
-                <li class="active"><a href="/contact.html">Contact</a></li>
+                <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
 
+
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Contact info</h1>
-        <p class="lead"> </p>
-        <p class="lead">761 Allen Court, Palo Alto, CA 94303</p>
-        <p class="lead">(650) 416-4224</p>
-        <p class="lead">renatacummins@gmail.com</p>
-         <p class="lead"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/renatacummins" data-format="hover" data-text="Renata Cummins" data-related="false"></script></p>
-        <p class="lead"><a href="http://www.facebook.com/renata.cummins">Facebook</a></p>
+        <p class="lead">Coming soon</p>
       </div>
 
         
