added 60px bottom margin to h1 class

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,13 @@
         margin: 60px 0;
       }
 
+    /* Put a margin below the h1 header
+    -------------------------------------------------- */
+
+      .h1 {
+        margin-bottom: 60px;
+      }
+
       /* Main marketing message and sign up button */
       .jumbotron {
         margin: 80px 0;
